--- a/develop/css/style.css
+++ b/develop/css/style.css
@@ -1,1 +1,25 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: blanchedalmond;
+}
+
+main {
+    text-align: center;
+}
+
+.bar {
+    background-color: darkgreen;
+    color: white;
+}
+
+footer{
+    margin-top: auto;
+}
