--- a/develop/css/style.css
+++ b/develop/css/style.css
@@ -8,18 +8,67 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: blanchedalmond;
+    background-color: rgb(255, 175, 25);
+}
+
+header {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+nav {
+    text-align: end;
+    padding: 10px;
+}
+
+ul li {
+    display: inline;
+    font-size: 15px;
+}
+
+.bar {
+    background-color: rgb(69, 69, 69);
+    color: white;
 }
 
 main {
     text-align: center;
+    padding-top: 50px;
 }
 
-.bar {
-    background-color: darkgreen;
-    color: white;
+#section-1 {
+    background-color: white;
 }
 
-footer{
+img {
+    width: 200px;
+    height: 200px;
+    border: 10px solid;
+    border-color: rgb(255, 175, 25);
+}
+
+p {
+    width: 400px;
+    padding: 10px 100px;
+    margin: 20px auto;
+}
+
+#section-2 {
+    padding-top: 10px;
+}
+
+form div {
+    border: 5px solid;
+    border-radius: 30px;
+    width: 400px;
+    height: 90px;
+    margin: 20px auto;
+    padding-top: 30px;
+}
+
+footer {
     margin-top: auto;
+    text-align: center;
 }
